fix: add gap between homepage stats

--- a/src/assets/less/pages/globalping.less
+++ b/src/assets/less/pages/globalping.less
@@ -45,6 +45,7 @@
 
 			&_stats {
 				display: flex;
+				column-gap: 24px;
 
 				@media (min-width: @screen-sm-min) {
 					column-gap: 48px;
